// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FlexTable / FlexTable with different size props Tables With Different Column Distance On Mobile 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Column Distance on mobile
  </span>
  <div
    className="c2"
    role="table"
  />
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different size props Tables With Different Densities 1`] = `
.c3 {
  margin-bottom: 40px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c5 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c11 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c6 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c6 > *:first-child {
  padding-left: 0;
}

.c6 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c16 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 0px;
  padding-bottom: 0px;
  margin-right: 0;
  margin-left: 0;
}

.c16 > *:first-child {
  padding-left: 0;
}

.c16 > *:last-child {
  padding-right: 0;
}

.c17 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 0px;
  padding-bottom: 0px;
  margin-right: 0;
  margin-left: 0;
}

.c17:hover {
  background: #F5F5F5;
}

.c17 > *:first-child {
  padding-left: 0;
}

.c17 > *:last-child {
  padding-right: 0;
}

.c18 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 0;
  margin-left: 0;
}

.c18 > *:first-child {
  padding-left: 0;
}

.c18 > *:last-child {
  padding-right: 0;
}

.c19 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 0;
  margin-left: 0;
}

.c19:hover {
  background: #F5F5F5;
}

.c19 > *:first-child {
  padding-left: 0;
}

.c19 > *:last-child {
  padding-right: 0;
}

.c7 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c9 {
  overflow: hidden;
}

.c4 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Densities
  </span>
  <span
    className="c2"
  >
    Default (Medium)
  </span>
  <div
    className="c3"
  >
    <div
      className="c4"
      role="table"
    >
      <div
        className="c5 c6 c7"
        role="row"
      >
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 c13"
        role="row"
      >
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 c13"
        role="row"
      >
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <span
      className="c2"
    >
      Small
    </span>
    <div
      className="c4"
      role="table"
    >
      <div
        className="c5 c16 c7"
        role="row"
      >
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 c17"
        role="row"
      >
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 c17"
        role="row"
      >
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <span
      className="c2"
    >
      Medium
    </span>
    <div
      className="c4"
      role="table"
    >
      <div
        className="c5 c6 c7"
        role="row"
      >
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 c13"
        role="row"
      >
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 c13"
        role="row"
      >
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="c2"
  >
    Large
  </span>
  <div
    className="c4"
    role="table"
  >
    <div
      className="c5 c18 c7"
      role="row"
    >
      <div
        className="c8 c9"
        role="columnheader"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c12"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c8 c9"
        role="columnheader"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c12"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c8 c9"
        role="columnheader"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c12"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c5 c19"
      role="row"
    >
      <div
        className="c8 c14"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c15"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c8 c14"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c15"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c8 c14"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c15"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c5 c19"
      role="row"
    >
      <div
        className="c8 c14"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c15"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c8 c14"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c15"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c8 c14"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c15"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different size props Tables With Different Font Sizes 1`] = `
.c2 {
  margin-bottom: 40px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c5 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c11 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c6 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c6 > *:first-child {
  padding-left: 0;
}

.c6 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c7 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c9 {
  overflow: hidden;
}

.c4 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Font Sizes
  </span>
  <div
    className="c0"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Default (Medium)
      </span>
      <div
        className="c4"
        role="table"
      >
        <div
          className="c5 c6 c7"
          role="row"
        >
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12"
              >
                Header 1
              </span>
            </div>
          </div>
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12"
              >
                Header 2
              </span>
            </div>
          </div>
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12"
              >
                Header 3
              </span>
            </div>
          </div>
        </div>
        <div
          className="c5 c13"
          role="row"
        >
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c15"
              >
                Cell 1-1
              </span>
            </div>
          </div>
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c15"
              >
                Cell 1-2
              </span>
            </div>
          </div>
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c15"
              >
                Cell 1-3
              </span>
            </div>
          </div>
        </div>
        <div
          className="c5 c13"
          role="row"
        >
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c15"
              >
                Cell 2-1
              </span>
            </div>
          </div>
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c15"
              >
                Cell 2-2
              </span>
            </div>
          </div>
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c15"
              >
                Cell 2-3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Small
      </span>
      <div
        className="c4"
        role="table"
      >
        <div
          className="c5 c6 c7"
          role="row"
        >
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c16"
              >
                Header 1
              </span>
            </div>
          </div>
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c16"
              >
                Header 2
              </span>
            </div>
          </div>
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c16"
              >
                Header 3
              </span>
            </div>
          </div>
        </div>
        <div
          className="c5 c13"
          role="row"
        >
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c17"
              >
                Cell 1-1
              </span>
            </div>
          </div>
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c17"
              >
                Cell 1-2
              </span>
            </div>
          </div>
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c17"
              >
                Cell 1-3
              </span>
            </div>
          </div>
        </div>
        <div
          className="c5 c13"
          role="row"
        >
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c17"
              >
                Cell 2-1
              </span>
            </div>
          </div>
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c17"
              >
                Cell 2-2
              </span>
            </div>
          </div>
          <div
            className="c8 c14"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c17"
              >
                Cell 2-3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="c3"
    >
      Medium
    </span>
    <div
      className="c4"
      role="table"
    >
      <div
        className="c5 c6 c7"
        role="row"
      >
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 c13"
        role="row"
      >
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 c13"
        role="row"
      >
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c8 c14"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c15"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different size props Tables With Different Sizes In Mobile 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Sizes on mobile
  </span>
  <span
    className="c2"
  >
    Small density and font on desktop, large on mobile
  </span>
  <div
    className="c3"
    role="table"
  />
</div>
`;
